# PlateRecognition_ncnn

./: README.md
plate_detection_recognition/: CMakeLists.txt
plate_detection_recognition/include/: plate_detection_recognition.h
plate_detection_recognition/src/: main.cpp  plate_detection_recognition.cpp
plate_recognition/: CMakeLists.txt
plate_recognition/include/: plate_recognition.h
plate_recognition/src/: main.cpp  plate_recognition.cpp
plate_recognition/weights/: plate_recognition_color.ncnn.param
yolov5_platedetector/: CMakeLists.txt
yolov5_platedetector/include/: platedetector_yolov5.h
yolov5_platedetector/src/: main.cpp  platedetector_yolov5.cpp
yolov5_platedetector/weights/: yolov5plate.ncnn.param
yolov7_platedetector/: CMakeLists.txt
yolov7_platedetector/include/: platedetector_yolov7.h
yolov7_platedetector/src/: main.cpp  platedetector_yolov7.cpp
yolov7_platedetector/weights/: yolov7plate.ncnn.param
